include/xrap_msg.h

typedef struct _xrap_msg_t xrap_msg_t;
//  Set the metadata field, transferring ownership from caller
void
    xrap_msg_set_metadata (xrap_msg_t *self, zhash_t **metadata_p);
//  Get/set a value in the metadata dictionary
const char *
    xrap_msg_metadata_string (xrap_msg_t *self,
        const char *key, const char *default_value);
void
    xrap_msg_metadata_insert (xrap_msg_t *self,
        const char *key, const char *format, ...);
//  Get/set the if_unmodified_since field
uint64_t
    xrap_msg_if_unmodified_since (xrap_msg_t *self);
void
    xrap_msg_set_if_unmodified_since (xrap_msg_t *self, uint64_t if_unmodified_since);
//  Get/set the if_match field
const char *
    xrap_msg_if_match (xrap_msg_t *self);
void
    xrap_msg_set_if_match (xrap_msg_t *self, const char *format, ...);
//  Get/set the status_text field
const char *
    xrap_msg_status_text (xrap_msg_t *self);
void
    xrap_msg_set_status_text (xrap_msg_t *self, const char *format, ...);
//  Self test of this class
void
    xrap_msg_test (bool verbose);