include/zeb_handler.h

// Checks if the request etag matches our current one. Returns true if etags
// match, otherwise false.                                                  
typedef bool (zeb_handler_check_etag_fn) (
    const char *etag);
// Checks if the request last modified timestamp matches our current one.
// Returns true if timestamps match, otherwise false.                    
typedef bool (zeb_handler_check_last_modified_fn) (
    const uint64_t last_modified);
//  Add a new offer this handler will handle. Returns 0 if successful,
//  otherwise -1.                                                     
ZWEBRAP_EXPORT int
    zeb_handler_add_offer (zeb_handler_t *self, int method, const char *uri);
//  Add a new accept type that this handler can deliver. May be a regular
//  expression. Returns 0 if successfull, otherwise -1.                  
ZWEBRAP_EXPORT int
    zeb_handler_add_accept (zeb_handler_t *self, const char *accept);
//  Self test of this class.
ZWEBRAP_EXPORT void
    zeb_handler_test (bool verbose);